Added 2 queries to explore projects. These are not yet tested
